# python-helpers

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.wex/: config.yml
.wex/doc/: todo.md
.wex/python/: .last-commit
.wex/python/app_manager/: requirements.txt
docs/examples/: debug_dump.py  debug_trace.py  exception.py  trace.py
helpers/: file_helper.py
src/wexample_helpers/classes/: abstract_method.py  base_class.py  base_field.py  extended_base_class.py  extended_base_model.py  field.py  private_field.py  protected_field.py  shell_result.py  unique_base_model.py
src/wexample_helpers/const/: ansi.py  globals.py  spinners.py  terminal.py  types.py  version.py
src/wexample_helpers/decorator/: base_class.py
src/wexample_helpers/enums/: debug_path_style.py  error_truncate_rule.py  field_visibility.py
src/wexample_helpers/errors/: key_not_found_error.py  missing_required_env_var_error.py  multiple_base_model_inheritance_error.py
src/wexample_helpers/exception/: command_argument_conversion_exception.py  command_unexpected_argument_exception.py  local_path_not_found_exception.py  not_allowed_item_exception.py  not_allowed_variable_type_exception.py  undefined_exception.py
src/wexample_helpers/helpers/: ansi.py  args.py  array.py  classes.py  cli.py  debug.py  dict.py  directory.py  docker.py  error.py  file.py  json.py  module.py  path.py  polyfill.py  repo.py  (+7 more)
tests/: conftest.py
tests/helpers/: test_args.py  test_array.py  test_dict.py  test_directory.py  test_exception.py  test_file.py  test_frame.py  test_helper_file.py  test_helper_type.py  test_helpers.py  test_html.py  test_json.py  test_polyfill.py  test_string.py  test_trace.py  test_type.py
tests/syntax/: test_inheritance.py  test_multiple_inheritance.py  test_property_class.py  test_pydantic_advanced.py  test_pydantic_circular.py  test_pydantic_class.py  test_pydantic_inheritance.py  test_simple_class.py  test_unique_base_model.py
wexample_helpers/classes/: abstract_gateway.py  extended_base_model.py  local_file_path.py  local_file_path_existing.py  trace_frame.py  unique_base_model.py
wexample_helpers/const/: ansi.py  colors.py  globals.py  types.py
wexample_helpers/debug/: abstract_debug.py  debug_breakpoint.py  debug_dump.py  debug_dump_class.py  debug_trace.py
wexample_helpers/enums/: debug_path_style.py  error_truncate_rule.py
wexample_helpers/errors/: gateway_error.py  key_not_found_error.py  missing_required_env_var_error.py  multiple_base_model_inheritance_error.py
wexample_helpers/exception/: abstract_exception.py  not_allowed_item_exception.py  not_allowed_variable_type_exception.py  undefined_exception.py
wexample_helpers/helpers/: ansi.py  args.py  args_helper.py  array.py  array_helper.py  cli.py  debug.py  dict.py  dict_helper.py  directory.py  directory_helper.py  error.py  file.py  file_helper.py  git_helper.py  html.py  import.py  import_helper.py  json.py  module.py  package.py  path.py  polyfill.py  python.py  string.py  string_helper.py  trace.py  type.py  type_helper.py  version.py
wexample_helpers/service/: registry.py  service_registry.py
wexample_helpers/test/: abstract_test_helpers.py
(+114 files in other folders)
