[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-helpers"
version = "0.0.63"
description = "Some python basic helpers and constants."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers"

[project.entry-points.pytest11]
wexample-helpers = "wexample_helpers.test.plugin.runtest_makereport"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pdm.build]
includes = ["python_package_workdir/py.typed"]
