[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-helpers"
version = "0.0.68"
description = "Some python basic helpers and constants."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_helpers"
from = "src"
